--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 	<build>
 		<plugins>
 			<!-- Compiler Plugin -->
@@ -150,6 +149,11 @@
 							<artifactId>lombok</artifactId>
 							<version>1.18.30</version>
 						</path>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>1.5.5.Final</version>
+						</path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
@@ -161,5 +165,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
